@@ -89,6 +89,7 @@ not be used in the new code, it is provided for backwards compatibility only.
 
 \latexignore{\rtfignore{\wxheading{Members}}}
 
+
 \membersection{wxMenu::wxMenu}\label{wxmenuctor}
 
 \func{}{wxMenu}{\param{const wxString\& }{title = ""}, \param{long}{ style = 0}}
@@ -109,6 +110,7 @@ Constructs a wxMenu object.
 
 \docparam{style}{If set to {\tt wxMENU\_TEAROFF}, the menu will be detachable (wxGTK only).}
 
+
 \membersection{wxMenu::\destruct{wxMenu}}\label{wxmenudtor}
 
 \func{}{\destruct{wxMenu}}{\void}
@@ -121,6 +123,7 @@ you delete or re-use the popup menu {\it before} destroying the
 parent window. Re-use in this context means popping up the menu on
 a different window from last time, which causes an implicit destruction
 and recreation of internal data structures.
+
 
 \membersection{wxMenu::Append}\label{wxmenuappend}
 
@@ -198,6 +201,7 @@ characters listed in the table below (again, case doesn't matter):
 \helpref{wxMenu::AppendSeparator}{wxmenuappendseparator},\rtfsp
 \helpref{wxMenu::AppendCheckItem}{wxmenuappendcheckitem},\rtfsp
 \helpref{wxMenu::AppendRadioItem}{wxmenuappendradioitem},\rtfsp
+\helpref{wxMenu::AppendSubMenu}{wxmenuappendsubmenu},\rtfsp
 \helpref{wxMenu::Insert}{wxmenuinsert},\rtfsp
 \helpref{wxMenu::SetLabel}{wxmenusetlabel}, \helpref{wxMenu::GetHelpString}{wxmenugethelpstring},\rtfsp
 \helpref{wxMenu::SetHelpString}{wxmenusethelpstring}, \helpref{wxMenuItem}{wxmenuitem}
@@ -212,6 +216,7 @@ implements the following methods:
 \end{twocollist}}
 }
 
+
 \membersection{wxMenu::AppendCheckItem}\label{wxmenuappendcheckitem}
 
 \func{wxMenuItem*}{AppendCheckItem}{\param{int}{ id},\rtfsp
@@ -223,6 +228,7 @@ Adds a checkable item to the end of the menu.
 
 \helpref{wxMenu::Append}{wxmenuappend},\rtfsp
 \helpref{wxMenu::InsertCheckItem}{wxmenuinsertcheckitem}
+
 
 \membersection{wxMenu::AppendRadioItem}\label{wxmenuappendradioitem}
 
@@ -241,6 +247,7 @@ automatically unchecked.
 \helpref{wxMenu::Append}{wxmenuappend},\rtfsp
 \helpref{wxMenu::InsertRadioItem}{wxmenuinsertradioitem}
 
+
 \membersection{wxMenu::AppendSeparator}\label{wxmenuappendseparator}
 
 \func{wxMenuItem*}{AppendSeparator}{\void}
@@ -252,11 +259,22 @@ Adds a separator to the end of the menu.
 \helpref{wxMenu::Append}{wxmenuappend},\rtfsp
 \helpref{wxMenu::InsertSeparator}{wxmenuinsertseparator}
 
+
+\membersection{wxMenu::AppendSubMenu}\label{wxmenuappendsubmenu}
+
+\func{wxMenuItem *}{AppendSubMenu}{\param{wxMenu *}{submenu}, \param{const wxString\& }{text}, \param{const wxString\& }{help = wxEmptyString}}
+
+Adds the given \arg{submenu} to this menu. \arg{text} is the text shown in the
+menu for it and \arg{help} is the help string shown in the status bar when the
+submenu item is selected.
+
+
 \membersection{wxMenu::Break}\label{wxmenubreak}
 
 \func{void}{Break}{\void}
 
 Inserts a break in a menu, causing the next appended item to appear in a new column.
+
 
 \membersection{wxMenu::Check}\label{wxmenucheck}
 
@@ -273,6 +291,7 @@ Checks or unchecks the menu item.
 \wxheading{See also}
 
 \helpref{wxMenu::IsChecked}{wxmenuischecked}
+
 
 \membersection{wxMenu::Delete}\label{wxmenudelete}
 
@@ -296,6 +315,7 @@ delete a submenu.
 \helpref{wxMenu::Destroy}{wxmenudestroy},\rtfsp
 \helpref{wxMenu::Remove}{wxmenuremove}
 
+
 \membersection{wxMenu::Destroy}\label{wxmenudestroy}
 
 \func{void}{Destroy}{\param{int }{id}}
@@ -318,6 +338,7 @@ be deleted. Use \helpref{Remove}{wxmenuremove} if you want to keep the submenu
 \helpref{wxMenu::Deletes}{wxmenudelete},\rtfsp
 \helpref{wxMenu::Remove}{wxmenuremove}
 
+
 \membersection{wxMenu::Enable}\label{wxmenuenable}
 
 \func{void}{Enable}{\param{int}{ id}, \param{const bool}{ enable}}
@@ -333,6 +354,7 @@ Enables or disables (greys out) a menu item.
 \wxheading{See also}
 
 \helpref{wxMenu::IsEnabled}{wxmenuisenabled}
+
 
 \membersection{wxMenu::FindItem}\label{wxmenufinditem}
 
@@ -372,11 +394,13 @@ before matching.
 \pythonnote{The name of this method in wxPython is {\tt FindItemById} 
 and it does not support the second parameter.}
 
+
 \membersection{wxMenu::FindItemByPosition}\label{wxmenufinditembyposition}
 
 \constfunc{wxMenuItem*}{FindItemByPosition}{\param{size\_t }{position}}
 
 Returns the wxMenuItem given a position in the menu.
+
 
 \membersection{wxMenu::GetHelpString}\label{wxmenugethelpstring}
 
@@ -397,6 +421,7 @@ item was not found.
 
 \helpref{wxMenu::SetHelpString}{wxmenusethelpstring}, \helpref{wxMenu::Append}{wxmenuappend}
 
+
 \membersection{wxMenu::GetLabel}\label{wxmenugetlabel}
 
 \constfunc{wxString}{GetLabel}{\param{int}{ id}}
@@ -415,11 +440,13 @@ The item label, or the empty string if the item was not found.
 
 \helpref{wxMenu::SetLabel}{wxmenusetlabel}
 
+
 \membersection{wxMenu::GetMenuItemCount}\label{wxmenugetmenuitemcount}
 
 \constfunc{size\_t}{GetMenuItemCount}{\void}
 
 Returns the number of items in the menu.
+
 
 \membersection{wxMenu::GetMenuItems}\label{wxmenugetmenuitems}
 
@@ -427,6 +454,7 @@ Returns the number of items in the menu.
 
 Returns the list of items in the menu. wxMenuItemList is a pseudo-template
 list class containing wxMenuItem pointers.
+
 
 \membersection{wxMenu::GetTitle}\label{wxmenugettitle}
 
@@ -443,6 +471,7 @@ menubar.
 \wxheading{See also}
 
 \helpref{wxMenu::SetTitle}{wxmenusettitle}
+
 
 \membersection{wxMenu::Insert}\label{wxmenuinsert}
 
@@ -461,6 +490,7 @@ as appending it.
 \helpref{wxMenu::Append}{wxmenuappend},\rtfsp
 \helpref{wxMenu::Prepend}{wxmenuprepend}
 
+
 \membersection{wxMenu::InsertCheckItem}\label{wxmenuinsertcheckitem}
 
 \func{wxMenuItem*}{InsertCheckItem}{\param{size\_t }{pos}, \param{int}{ id},\rtfsp
@@ -472,6 +502,7 @@ Inserts a checkable item at the given position.
 
 \helpref{wxMenu::Insert}{wxmenuinsert},\rtfsp
 \helpref{wxMenu::AppendCheckItem}{wxmenuappendcheckitem}
+
 
 \membersection{wxMenu::InsertRadioItem}\label{wxmenuinsertradioitem}
 
@@ -485,6 +516,7 @@ Inserts a radio item at the given position.
 \helpref{wxMenu::Insert}{wxmenuinsert},\rtfsp
 \helpref{wxMenu::AppendRadioItem}{wxmenuappendradioitem}
 
+
 \membersection{wxMenu::InsertSeparator}\label{wxmenuinsertseparator}
 
 \func{wxMenuItem*}{InsertSeparator}{\param{size\_t }{pos}}
@@ -495,6 +527,7 @@ Inserts a separator at the given position.
 
 \helpref{wxMenu::Insert}{wxmenuinsert},\rtfsp
 \helpref{wxMenu::AppendSeparator}{wxmenuappendseparator}
+
 
 \membersection{wxMenu::IsChecked}\label{wxmenuischecked}
 
@@ -514,6 +547,7 @@ true if the menu item is checked, false otherwise.
 
 \helpref{wxMenu::Check}{wxmenucheck}
 
+
 \membersection{wxMenu::IsEnabled}\label{wxmenuisenabled}
 
 \constfunc{bool}{IsEnabled}{\param{int}{ id}}
@@ -532,6 +566,7 @@ true if the menu item is enabled, false otherwise.
 
 \helpref{wxMenu::Enable}{wxmenuenable}
 
+
 \membersection{wxMenu::Prepend}\label{wxmenuprepend}
 
 \func{wxMenuItem*}{Prepend}{\param{wxMenuItem *}{item}}
@@ -548,6 +583,7 @@ existing items.
 \helpref{wxMenu::Append}{wxmenuappend},\rtfsp
 \helpref{wxMenu::Insert}{wxmenuinsert}
 
+
 \membersection{wxMenu::PrependCheckItem}\label{wxmenuprependcheckitem}
 
 \func{wxMenuItem*}{PrependCheckItem}{\param{int}{ id},\rtfsp
@@ -559,6 +595,7 @@ Inserts a checkable item at position $0$.
 
 \helpref{wxMenu::Prepend}{wxmenuprepend},\rtfsp
 \helpref{wxMenu::AppendCheckItem}{wxmenuappendcheckitem}
+
 
 \membersection{wxMenu::PrependRadioItem}\label{wxmenuprependradioitem}
 
@@ -572,6 +609,7 @@ Inserts a radio item at position $0$.
 \helpref{wxMenu::Prepend}{wxmenuprepend},\rtfsp
 \helpref{wxMenu::AppendRadioItem}{wxmenuappendradioitem}
 
+
 \membersection{wxMenu::PrependSeparator}\label{wxmenuprependseparator}
 
 \func{wxMenuItem*}{PrependSeparator}{\void}
@@ -582,6 +620,7 @@ Inserts a separator at position $0$.
 
 \helpref{wxMenu::Prepend}{wxmenuprepend},\rtfsp
 \helpref{wxMenu::AppendSeparator}{wxmenuappendseparator}
+
 
 \membersection{wxMenu::Remove}\label{wxmenuremove}
 
@@ -603,6 +642,7 @@ object. This allows to reuse the same item later by adding it back to the menu
 
 The item which was detached from the menu.
 
+
 \membersection{wxMenu::SetHelpString}\label{wxmenusethelpstring}
 
 \func{void}{SetHelpString}{\param{int}{ id}, \param{const wxString\& }{helpString}}
@@ -619,6 +659,7 @@ Sets an item's help string.
 
 \helpref{wxMenu::GetHelpString}{wxmenugethelpstring}
 
+
 \membersection{wxMenu::SetLabel}\label{wxmenusetlabel}
 
 \func{void}{SetLabel}{\param{int}{ id}, \param{const wxString\& }{label}}
@@ -634,6 +675,7 @@ Sets the label of a menu item.
 \wxheading{See also}
 
 \helpref{wxMenu::Append}{wxmenuappend}, \helpref{wxMenu::GetLabel}{wxmenugetlabel}
+
 
 \membersection{wxMenu::SetTitle}\label{wxmenusettitle}
 
@@ -654,6 +696,7 @@ menubar.
 \wxheading{See also}
 
 \helpref{wxMenu::GetTitle}{wxmenugettitle}
+
 
 \membersection{wxMenu::UpdateUI}\label{wxmenuupdateui}
 
@@ -699,6 +742,7 @@ menu shortcuts may cease to work.
 
 \latexignore{\rtfignore{\wxheading{Members}}}
 
+
 \membersection{wxMenuBar::wxMenuBar}\label{wxmenubarctor}
 
 \func{}{wxMenuBar}{\param{long }{style = 0}}
@@ -726,11 +770,13 @@ Use \helpref{wxMenuBar::Append}{wxmenubarappend} instead.}
 \perlnote{wxPerl only supports the first constructor: 
 use \helpref{wxMenuBar::Append}{wxmenubarappend} instead.}
 
+
 \membersection{wxMenuBar::\destruct{wxMenuBar}}\label{wxmenubardtor}
 
 \func{void}{\destruct{wxMenuBar}}{\void}
 
 Destructor, destroying the menu bar and removing it from the parent frame (if any).
+
 
 \membersection{wxMenuBar::Append}\label{wxmenubarappend}
 
@@ -752,6 +798,7 @@ true on success, false if an error occurred.
 
 \helpref{wxMenuBar::Insert}{wxmenubarinsert}
 
+
 \membersection{wxMenuBar::Check}\label{wxmenubarcheck}
 
 \func{void}{Check}{\param{int}{ id}, \param{const bool}{ check}}
@@ -768,6 +815,7 @@ Checks or unchecks a menu item.
 
 Only use this when the menu bar has been associated
 with a frame; otherwise, use the wxMenu equivalent call.
+
 
 \membersection{wxMenuBar::Enable}\label{wxmenubarenable}
 
@@ -786,6 +834,7 @@ Enables or disables (greys out) a menu item.
 Only use this when the menu bar has been
 associated with a frame; otherwise, use the wxMenu equivalent call.
 
+
 \membersection{wxMenuBar::EnableTop}\label{wxmenubarenabletop}
 
 \func{void}{EnableTop}{\param{int}{ pos}, \param{const bool}{ enable}}
@@ -803,6 +852,7 @@ Enables or disables a whole menu.
 Only use this when the menu bar has been
 associated with a frame.
 
+
 \membersection{wxMenuBar::FindMenu}\label{wxmenubarfindmenu}
 
 \constfunc{int}{FindMenu}{\param{const wxString\& }{title}}
@@ -811,6 +861,7 @@ Returns the index of the menu with the given {\it title} or {\tt wxNOT\_FOUND} i
 such menu exists in this menubar. The {\it title} parameter may specify either
 the menu title (with accelerator characters, i.e. {\tt "\&File"}) or just the
 menu label ({\tt "File"}) indifferently.
+
 
 \membersection{wxMenuBar::FindMenuItem}\label{wxmenubarfindmenuitem}
 
@@ -833,6 +884,7 @@ The menu item identifier, or {\tt wxNOT\_FOUND} if none was found.
 Any special menu codes are stripped out of source and target strings
 before matching.
 
+
 \membersection{wxMenuBar::FindItem}\label{wxmenubarfinditem}
 
 \constfunc{wxMenuItem *}{FindItem}{\param{int}{ id}, \param{wxMenu}{ **menu = NULL}}
@@ -848,6 +900,7 @@ Finds the menu item object associated with the given menu item identifier.
 \wxheading{Return value}
 
 The found menu item object, or NULL if one was not found.
+
 
 \membersection{wxMenuBar::GetHelpString}\label{wxmenubargethelpstring}
 
@@ -868,6 +921,7 @@ was not found.
 
 \helpref{wxMenuBar::SetHelpString}{wxmenubarsethelpstring}
 
+
 \membersection{wxMenuBar::GetLabel}\label{wxmenubargetlabel}
 
 \constfunc{wxString}{GetLabel}{\param{int}{ id}}
@@ -885,6 +939,7 @@ The menu item label, or the empty string if the item was not found.
 \wxheading{Remarks}
 
 Use only after the menubar has been associated with a frame.
+
 
 \membersection{wxMenuBar::GetLabelTop}\label{wxmenubargetlabeltop}
 
@@ -910,17 +965,20 @@ Use only after the menubar has been associated with a frame.
 
 \helpref{wxMenuBar::SetLabelTop}{wxmenubarsetlabeltop}
 
+
 \membersection{wxMenuBar::GetMenu}\label{wxmenubargetmenu}
 
 \constfunc{wxMenu*}{GetMenu}{\param{int}{ menuIndex}}
 
 Returns the menu at {\it menuIndex} (zero-based).
 
+
 \membersection{wxMenuBar::GetMenuCount}\label{wxmenubargetmenucount}
 
 \constfunc{int}{GetMenuCount}{\void}
 
 Returns the number of menus in this menubar.
+
 
 \membersection{wxMenuBar::Insert}\label{wxmenubarinsert}
 
@@ -947,6 +1005,7 @@ true on success, false if an error occurred.
 
 \helpref{wxMenuBar::Append}{wxmenubarappend}
 
+
 \membersection{wxMenuBar::IsChecked}\label{wxmenubarischecked}
 
 \constfunc{bool}{IsChecked}{\param{int}{ id}}
@@ -960,6 +1019,7 @@ Determines whether an item is checked.
 \wxheading{Return value}
 
 true if the item was found and is checked, false otherwise.
+
 
 \membersection{wxMenuBar::IsEnabled}\label{wxmenubarisenabled}
 
@@ -975,11 +1035,13 @@ Determines whether an item is enabled.
 
 true if the item was found and is enabled, false otherwise.
 
+
 \membersection{wxMenuBar::Refresh}\label{wxmenubarrefresh}
 
 \func{void}{Refresh}{\void}
 
 Redraw the menu bar
+
 
 \membersection{wxMenuBar::Remove}\label{wxmenubarremove}
 
@@ -993,6 +1055,7 @@ dynamically.
 \wxheading{See also}
 
 \helpref{wxMenuBar::Replace}{wxmenubarreplace}
+
 
 \membersection{wxMenuBar::Replace}\label{wxmenubarreplace}
 
@@ -1018,6 +1081,7 @@ responsible for deleting it.
 \helpref{wxMenuBar::Insert}{wxmenubarinsert},\rtfsp
 \helpref{wxMenuBar::Remove}{wxmenubarremove}
 
+
 \membersection{wxMenuBar::SetHelpString}\label{wxmenubarsethelpstring}
 
 \func{void}{SetHelpString}{\param{int}{ id}, \param{const wxString\& }{helpString}}
@@ -1033,6 +1097,7 @@ Sets the help string associated with a menu item.
 \wxheading{See also}
 
 \helpref{wxMenuBar::GetHelpString}{wxmenubargethelpstring}
+
 
 \membersection{wxMenuBar::SetLabel}\label{wxmenubarsetlabel}
 
@@ -1053,6 +1118,7 @@ Use only after the menubar has been associated with a frame.
 \wxheading{See also}
 
 \helpref{wxMenuBar::GetLabel}{wxmenubargetlabel}
+
 
 \membersection{wxMenuBar::SetLabelTop}\label{wxmenubarsetlabeltop}
 
